--- a/src/app/pages/products/products.page.html
+++ b/src/app/pages/products/products.page.html
@@ -1,13 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>products</ion-title>
+    <ion-title>Product List</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">products</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-list>
+    <!-- Loop through products -->
+    <ion-item *ngFor="let product of products">
+      <ion-thumbnail slot="start">
+        <img [src]="product.thumbnail" alt="{{ product.title }}" />
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ product.title }}</h2>
+        <p>Price: ${{ product.price }}</p>
+        <p>Discount: {{ product.discountPercentage }}%</p>
+      </ion-label>
+      <ion-button
+        slot="end"
+        color="primary"
+        (click)="addToCart(product)"
+      >
+        Add to Cart
+      </ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
